src/test/ui/rfc-2091-track-caller/error-with-trait-fns.stderr
error[E0903]: `#[track_caller]` is not supported for trait items yet.
  --> $DIR/error-with-trait-fns.rs:4:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0903`.
