src/test/ui/rfc-2091-track-caller/error-with-trait-fns.rs
#![feature(track_caller)]

trait Trait {
    #[track_caller]
    fn unwrap(&self);
    //~^^ ERROR: `#[track_caller]` is not supported for trait items yet.
}

impl Trait for u64 {
    fn unwrap(&self) {}
}

fn main() {}
